Fix adding packages.
