# backend/ViewModels/FinishedPackage.cs
@@ -1,0 +1,12 @@
+namespace backend.ViewModels
+{
+    public class FinishedPackage
+    {
+        public FinishedPackage(int id)
+        {
+            Id = id;
+        }
+
+        public int Id { get; set; }
+    }
+}
